@@ -66,6 +66,7 @@ exportMethods(
   "LIST",
   "[",
   "aggregate",
+  "abbreviate",
   "addComplement",
   "coverage",
   "crossTable",
@@ -130,9 +131,3 @@ exportMethods(
   "predict",
   "dissimilarity"
 )
-
-S3method(abbreviate, default)
-S3method(abbreviate, transactions)
-S3method(abbreviate, rules)
-S3method(abbreviate, itemsets)
-S3method(abbreviate, tidLists)
