@@ -10,6 +10,7 @@ Changes in version 1-3-1.1 (xx/xx/2016)
       associations first.
     * Groceries: fixed typo in dataset.
     * transaction class lost slot transactionInfo (we use itemsetInfo now).
+    * abbreviate is now a S4 generic with S4 methods.
 
 Changes in version 1-3-1 (12/13/2015)
     * we now require R 2.3.0 so cbind in Matrix works.
